<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ASAM</string>
    <string name="sync_loading_text">Fetching latest data...</string>
    <string name="empty_content_description"></string>
    <string name="hyphen_text">-</string>
    <string name="map_type_normal_text">Normal</string>
    <string name="map_type_satellite_text">Satellite</string>
    <string name="map_type_hybrid_text">Hybrid</string>
    <string name="map_type_offline_110m_text">Offline 1:110m</string>
    <string name="map_type_offline_50m_text">Offline 1:50m</string>
    <string name="offline_map_progress_dialog_title_text">Please wait...</string>
    <string name="offline_map_progress_dialog_content_text">Loading offline map data</string>
    <string name="asam_map_label">ASAM</string>
    <string name="filter_label">Filters</string>
    <string name="filter_interval_label">Time Interval</string>
    <string name="filter_current_subregion_label">Current Subregion</string>
    <string name="all_asams_list_title_text">List View</string>
    <string name="all_asams_about_title_text">About</string>
    <string name="all_asams_map_title_text">ASAM</string>
    <string name="all_asams_map_query_error_text">There was an error retrieving new ASAMs.</string>
    <string name="all_asams_map_no_asams_text">No ASAM activity found</string>
    <string name="all_asams_map_1_asam_text">1 Result</string>
    <string name="all_asams_map_1_asam_text_with_timespan">1 Filtered ASAM</string>
    <string name="all_asams_map_1_asam_text_with_timespan_with_subregions">1 Result; %1$s; %2$s</string>
...
    <string name="asam_report_reference_number_label_text">Reference Number</string>
    <string name="asam_report_location_label_text">Geographical Location</string>
    <string name="asam_report_description_label_text">Description</string>
    <string name="asam_report_map_it_label_text">Map It</string>
    <string name="asam_report_back_button_text">Back</string>
    <string name="tablet_disclaimer">true</string>
    <string name="disclaimer_title_text">Disclaimer</string>
    <string name="disclaimer_show_text">Show this disclaimer on launch</string>
    <string name="disclaimer_text">
        Information contained in this Application resides on a computer system funded by the National Geospatial-Intelligence Agency. This system
        and related equipment are intended for the communication, transmission, processing and storage of U.S. Government information.\n\nWith respect to
        information available in this Application, neither the United States Government nor the National Geospatial-Intelligence Agency nor any of their
        employees, makes any warranty, express or implied, including the warranties of merchantability and fitness for a particular purpose, or assumes any
...
    <string name="launch_screen_all_asams_label_text">Map View</string>
    <string name="launch_screen_subregions_label_text">Subregions</string>
    <string name="launch_screen_text_query_label_text">ASAM Query</string>
    <string name="launch_screen_settings_label_text">Settings</string>
    <string name="legal_title_text">Legal</string>
    <string name="legal_fragment_nga_disclaimer_label_text">NGA Disclaimer</string>
    <string name="legal_fragment_nga_privacy_policy_label_text">NGA Privacy Policy</string>
    <string name="legal_fragment_nga_open_source_licenses_label_text">Open Source Licenses</string>
    <string name="legal_details_title_text">License</string>
    <string name="legal_details_nga_disclaimer_title_text">NGA Disclaimer</string>
    <string name="legal_details_nga_privacy_policy_title_text">ASAM App</string>
    <string name="legal_details_fragment_nga_privacy_policy_license_text">
                     NGA Mobile Application Privacy Policy for ASAM Mobile
                     \n\n
...
    <string name="sort_asam_list_dialog_fragment_sort_button_text">Sort</string>
    <string name="sort_asam_list_dialog_fragment_cancel_button_text">Cancel</string>
    <string name="sort_asam_list_dialog_fragment_spinner_prompt_text">Sort By</string>
    <string name="sort_asam_list_dialog_fragment_ascending_radio_button_text">Ascending</string>
    <string name="sort_asam_list_dialog_fragment_descending_radio_button_text">Descending</string>
    <string name="subregion_map_title_text">Subregions</string>
    <string name="subregion_map_menu_selected_subregions_text">Selected Subregions</string>
    <string name="subregion_map_menu_query_text">Query</string>
    <string name="subregion_map_menu_clear_text">Clear</string>
    <string name="subregion_map_menu_apply_text">Apply</string>
    <string name="subregion_map_menu_60_days_text">60 days</string>
    <string name="subregion_map_menu_90_days_text">90 days</string>
    <string name="subregion_map_menu_180_days_text">180 days</string>
    <string name="subregion_map_menu_1_year_text">1 year</string>
    <string name="subregion_map_menu_5_years_text">5 years</string>
...
        <item>Subregions</item>
        <item>Reference Number</item>
        <item>Victim</item>
        <item>Hostility</item>
    </string-array>
    
    <string-array name="subregions">
        <item>None</item>
        <item>Current Location</item>
        <item>Subregion 11</item>
        <item>Subregion 12</item>
        <item>Subregion 13</item>
        <item>Subregion 14</item>
...
