<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asam="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/all_asams_map_menu_search_ui"
        android:title="@string/all_asams_map_menu_query_text"
        asam:showAsAction="ifRoom"
        android:icon="@drawable/ic_search_white"
        android:menuCategory="system"
        android:orderInCategory="100"/>

    <item android:id="@+id/all_asams_map_menu_list_view_ui"
        android:title="@string/all_asams_map_menu_list_view_text"
        asam:showAsAction="ifRoom"
        android:icon="@drawable/ic_list_white"
        android:menuCategory="system"
        android:orderInCategory="200"/>

    <item android:id="@+id/about"
        android:title="@string/all_asams_about_title_text"
        android:icon="@drawable/ic_info_outline_white_24dp"
        asam:showAsAction="ifRoom"
        android:menuCategory="system"
        android:orderInCategory="300"/>

</menu>