...
        </LinearLayout>
            
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
                
            <EditText android:id="@+id/text_query_date_from_edit_text_ui"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:gravity="left"
                android:hint="@string/text_query_date_hint_text"
...
                    
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hyphen_text"
                />
                    
            <EditText android:id="@+id/text_query_date_to_edit_text_ui"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:hint="@string/text_query_date_hint_text"
                android:focusable="false"
...
